# mycelium

./: .coderabbit.yaml  .gitignore  .pre-commit-config.yaml  .release-please-manifest.json  AGENTS.md  CHANGELOG.md  LICENSE  NOTICE  README.md  pyproject.toml  release-please-config.json
.beads/: config.yaml  interactions.jsonl  metadata.json
.claude/: settings.json
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml  dependabot-automerge.yml  publish.yml  release-please.yml  security.yml
docs/design/: non-negotiables.md
