[project]
name = "mcm-mycelium"
version = "0.0.0-a.132"
description = "mycelium — experiment contracts, statistical optimisation, and portable executors for small-model training"
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
authors = [{ name = "Finn Danger Cathersides" }]
classifiers = ["Development Status :: 3 - Alpha"]
# The published wheel ships all four module trees (reishi, enoki, oyster,
# physarum); the base dependencies are reishi's alone. Extras below only add
# each module's third-party deps -- never code.
dependencies = ["pyyaml>=6.0.3"]

[project.optional-dependencies]
# enoki's KubeRay stack (torch/ray/transformers) is deliberately NOT here: it
# is image-managed via enoki's `cluster` dependency-group, pinned against a
# custom cu124 torch index that PyPI metadata cannot express. The extra exists
# so `mycelium[all]` and future enoki deps have a stable name.
enoki = []
oyster = [
    "mlx ; sys_platform == 'darwin' and platform_machine == 'arm64'",
    "huggingface-hub>=1.22.0 ; sys_platform == 'darwin' and platform_machine == 'arm64'",
    "mlx-lm==0.31.3 ; sys_platform == 'darwin' and platform_machine == 'arm64'",
    # transformers>=5.13 breaks mlx_lm.tokenizer_utils's AutoTokenizer.register()
    # call ('str' object has no attribute '__module__').
    "transformers==5.12.1 ; sys_platform == 'darwin' and platform_machine == 'arm64'",
]
physarum = ["optuna>=4.9.0"]
all = ["mcm-mycelium[enoki,oyster,physarum]"]

[project.scripts]
reishi-admin = "reishi.cli:main"

[project.entry-points."mcm.plugins"]
enoki = "enoki.mcm_plugin"
physarum = "physarum.mcm_plugin"

# Declared here AND in each owning member's pyproject: the dev workspace
# reads member metadata, the published wheel is built from this file alone.
# In the dev venv both copies register (registry dedupes by name) -- keep
# them pointing at identical targets or resolution depends on iteration order.
[project.entry-points."mcm.producers"]
cpu = "physarum.producers.trafilatura_extract:train"
mlx = "oyster.trainers.mlx_lora:train"

[tool.uv.workspace]
members = ["packages/*"]

# Fork the universal lock per platform. mycelium runs in exactly two places:
# the linux/CUDA KubeRay training image (enoki cluster) and macOS dev/mesh
# machines (oyster mlx). Separate forks let enoki's transformers<5 and oyster's
# darwin-only transformers==5.12.1 resolve independently instead of colliding.
[tool.uv]
environments = ["sys_platform == 'linux'", "sys_platform == 'darwin'"]

# Workspace-internal deps resolve to the in-tree package, not PyPI. This is the
# monorepo replacement for each member's old `{ path = "../mcm-*" }` source.
[tool.uv.sources]
reishi = { workspace = true }
enoki = { workspace = true }
oyster = { workspace = true }
physarum = { workspace = true }
torch = [{ index = "pytorch-cu124" }]

# torch pulled from PyTorch's cu124 index rather than PyPI -- see the rationale
# on enoki's `cluster` group. Workspace-root scope so any member can depend on it.
[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[dependency-groups]
# The members appear here, not in [project.dependencies]: the dev venv needs
# them editable, but the published mcm-mycelium wheel carries their code
# inline and must not depend on PyPI names that don't exist. trafilatura is
# physarum's test/cpu-runtime dep (kept out of the published extras, which
# stay strictly module-named).
dev = [
    "reishi",
    "enoki",
    "oyster",
    "physarum",
    "trafilatura>=2.1.0",
    "mypy>=2.1.0",
    "pytest>=9.1.1",
    "types-pyyaml>=6.0.12.20260518",
]

[build-system]
# >=1.27: first release to build PEP 639 SPDX license expressions
# (license = "Apache-2.0" above) into Metadata-Version 2.4.
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
    "packages/reishi/src/reishi",
    "packages/enoki/src/enoki",
    "packages/oyster/src/oyster",
    "packages/physarum/src/physarum",
]

# Explicit include list: uv builds the wheel from the sdist, so the sdist must
# carry the package trees at their repo-relative paths (and nothing else --
# not .beads, docs, or CI config).
[tool.hatch.build.targets.sdist]
include = [
    "packages/*/src",
    "packages/*/pyproject.toml",
    "pyproject.toml",
    "README.md",
    "LICENSE",
    "NOTICE",
    "CHANGELOG.md",
]
